<resources>
    <string name="app_name">Popular Movies</string>
    <string name="details_movie_poster_alt">Movie poster</string>
    <string name="placeholder">Blank</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_popular">Popular</string>
    <string name="action_top_rated">Top Rated</string>
    <string name="action_favorites">Favorites</string>
    <string name="network_not_available_message">Error: network not available</string>

    <string name="sort_menu">Sort</string>
    <string name="details_trailers_title">Trailers:</string>
    <string name="details_trailers_error">There are no trailers for this movie</string>

    <string name="details_reviews_title">Reviews:</string>
    <string name="details_reviews_error">There are no user reviews for this movie</string>

    <string name="title_popular_movies">Popular Movies</string>
    <string name="title_top_rated_movies">Top Rated Movies</string>
    <string name="title_favorite_movies">Favorite Movies</string>

    <string name="movie_added_to_favorites">Movie added to favorites</string>
    <string name="movie_removed_from_favorites">Movie removed from favorites</string>

    <string name="no_content_message">Nothing here to show&#8230;</string>

</resources>
