<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:title="@string/sort_menu"
        android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:orderInCategory="1"
                android:title="@string/action_popular"
                android:id="@+id/action_popular"
                />
            <item
                android:orderInCategory="2"
                android:title="@string/action_top_rated"
                android:id="@+id/action_top_rated"
                />
            <item
                android:orderInCategory="3"
                android:title="@string/action_favorites"
                android:id="@+id/action_favorites"
                />

        </menu>
    </item>

</menu>