<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.udacity_project_1.popularmovies.MovieDetails">


    <ImageView
        android:layout_width="128dp"
        android:layout_height="196dp"
        android:id="@+id/iv_movie_details_poster"
        android:contentDescription="@string/details_movie_poster_alt" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_movie_details_title"
        android:textSize="24sp"
        android:layout_toRightOf="@id/iv_movie_details_poster"
        android:layout_toEndOf="@id/iv_movie_details_poster"
        android:layout_alignTop="@id/iv_movie_details_poster"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="textEnd"
        android:gravity="end"
        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rb_movie_details_rating"
        android:layout_below="@id/tv_movie_details_title"
        android:layout_alignRight="@id/tv_movie_details_title"
        android:layout_alignEnd="@id/tv_movie_details_title"
        android:layout_marginTop="10dp"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_movie_details_release_date"
        android:layout_below="@id/rb_movie_details_rating"
        android:layout_alignRight="@id/rb_movie_details_rating"
        android:layout_alignEnd="@id/rb_movie_details_rating"
        android:layout_marginTop="10dp"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_movie_details_poster"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_movie_details_synopsis_container"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_movie_details_synopsis"

        />

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_movie_details_synopsis_container"
        android:orientation="vertical"
        android:id="@+id/ll_movie_details_trailers_container"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_trailers_title"
            android:id="@+id/tv_movie_details_trailers_title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_trailers_error"
            android:id="@+id/tv_movie_details_trailers_error"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lv_movie_details_trailers"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_movie_details_trailers_container"
        android:orientation="vertical"
        android:id="@+id/ll_movie_details_reviews_container"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_reviews_title"
            android:id="@+id/tv_movie_details_reviews_title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_reviews_error"
            android:id="@+id/tv_movie_details_reviews_error"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lv_movie_details_reviews"
            />

    </LinearLayout>

</RelativeLayout>
